--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Joma_Store</title>
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="estilos/mediaquery.css">
-  
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600 display=swap"rel="stylesheet"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 </head>
 <body>
   <header>
     <nav>
-    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.png" alt=""></a><a href="index.html">Joma_Store</a></div>
+    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.png" alt=""></a><a href="index.html">FK.Diversos</a></div>
     <div class="hamburger" id="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
@@ -65,12 +67,57 @@
 
   <main>
      
-  
   </main>
 
-<footer>
+ <footer>
+      <div class="hero">
+        <div class="header">
+          <h2>
+            Not sure of the <br />
+            right plan for you?
+          </h2>
+          <p>
+            We have a great team here at SaturnChat<br />
+            waiting to help you with anything.
+          </p>
+        </div>
+        <button class="box-btn">
+          Let's Chat
+          <span class="material-symbols-outlined"> north_east </span>
+        </button>
+        <img src="imagens/bg.png" class="bg" />
+      </div>
+      <div class="content">
+        <img class="logo" src="imagens/logo.svg" />
 
-</footer>
+        <nav>
+          <ul>
+            <li><h3>Developers</h3></li>
+            <li><a>Docs</a></li>
+            <li><a>Tutorials</a></li>
+            <li><a>Examples</a></li>
+            <li><a>API</a></li>
+          </ul>
+          <ul>
+            <li><h3>Company</h3></li>
+            <li><a>About</a></li>
+            <li><a>Careers</a></li>
+            <li><a>Pricing</a></li>
+            <li><a>Legal</a></li>
+          </ul>
+          <ul>
+            <li><h3>Social</h3></li>
+            <li><a>Tiktok</a></li>
+            <li><a>Instagram</a></li>
+            <li><a>Facebbook</a></li>
+          </ul>
+        </nav>
+        <button class="box-btn support-btn">
+          Contact Sales
+          <span class="material-symbols-outlined"> north_east </span>
+        </button>
+      </div>
+    </footer>
 
   <script>
     function toggleMenu() {
