--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Joma_Store</title>
+  <title>F.k_Diversos</title>
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="estilos/mediaquery.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.png" alt=""></a><a href="index.html">FK.Diversos</a></div>
+    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.jpg" alt=""></a><a href="index.html">F.K_Diversos</a></div>
     <div class="hamburger" id="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
