--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.jpg" alt=""></a><a href="index.html">F.K_Diversos</a></div>
+    <div class="logo" id="logo"><a href="index.html"><img src="imagens/logo.png" alt=""></a><a href="index.html">F.K_Diversos</a></div>
     <div class="hamburger" id="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
