--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600 display=swap"rel="stylesheet"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-  
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
 
-main
+
 
 
 /* FILTROS */
@@ -108,7 +107,7 @@ main
       </li>
    
 
-        <li class="menu-item"><a href="#" onclick="toggleSubmenu(event)">Acessórios</a>
+        <li class="menu-item"><a href="#" onclick="toggleSubmenu(event)">Sobre</a>
       
       </li>
 
