--- a/produtos.html
+++ b/produtos.html
@@ -24,11 +24,11 @@
       <div></div>
     </div>
    <ul class="menu" id="mainMenu">
-      <li class="menu-item"><a href="index.html" onclick="toggleSubmenu(event)">Home</a></li>  
-      <li class="menu-item"><a href="produtos.html" onclick="toggleSubmenu(event)">Produtos</a></li>
-      <li class="menu-item"><a href="#" onclick="toggleSubmenu(event)">Sobre</a></li>
-      <li class="menu-item"><a href="#" onclick="toggleSubmenu(event)">Novidades</a></li> 
-    </ul>
+  <li class="menu-item"><a href="index.html">Home</a></li>
+  <li class="menu-item"><a href="produtos.html">Produtos</a></li>
+  <li class="menu-item"><a href="#">Sobre</a></li>
+  <li class="menu-item"><a href="#">Novidades</a></li>
+</ul>
     <div class="bolsa-de-compras">
       <!-- CARRINHO -->
     <div class="carrinho" onclick="abrirCarrinho()">🛒 <span id="countCarrinho">0</span></div>
